<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?attr/colorSurface"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Greeting"
        android:textAlignment="center"
        style="@style/Title"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/bomb_logo"
        app:tint="?attr/colorPrimary"
        android:contentDescription="@string/BombLogo"
        android:layout_gravity="center"/>

    <EditText
        android:id="@+id/nameEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/EditHint"/>

    <TextView
        android:id="@+id/nameError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#F54927"
        android:visibility="gone"
        android:text = "@string/nameError"/>

    <RadioGroup
        android:id="@+id/drinkChoiceRGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/latteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/latte"/>
        <RadioButton
            android:id="@+id/bobaButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/boba"/>
    </RadioGroup>

    <TextView
        android:id="@+id/radioError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#F54927"
        android:visibility="gone"
        android:text = "@string/radioError"/>

    <CheckBox
        android:id="@+id/oatCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/oat_milk_toggle"/>

    <Button
        android:id="@+id/submitOrder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SubmitBtn"/>

</LinearLayout>