<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OrderActivity"
    android:background="?attr/colorSurface"
    android:padding="24dp">

    <ImageView
        android:id="@+id/Logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:src="@drawable/bomb_logo"
        app:tint="?attr/colorPrimary"
        android:contentDescription="@string/BombLogo"/>

    <TextView
        android:id="@+id/orderTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/Logo"
        android:layout_centerHorizontal="true"
        android:text="@string/OrderMsg"
        android:paddingStart="5dp"
        style="@style/Title"/>

    <TextView
        android:id="@+id/nameTag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/orderTitle"
        android:layout_alignEnd="@id/oatTag"
        android:text="@string/name"
        android:paddingStart="10dp"
        style="@style/OrderReturn"/>

    <TextView
        android:id="@+id/nameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/nameTag"
        android:layout_below="@id/orderTitle"
        android:text=""
        android:paddingStart="10dp"
        style="@style/OrderReturn"/>

    <TextView
        android:id="@+id/orderTag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/nameTag"
        android:layout_alignEnd="@id/oatTag"
        android:text="@string/orderText"
        android:paddingStart="10dp"
        style="@style/OrderReturn"/>

    <TextView
        android:id="@+id/orderText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/orderTag"
        android:layout_below="@id/nameText"
        android:text=""
        android:paddingStart="10dp"
        style="@style/OrderReturn"/>

    <TextView
        android:id="@+id/oatTag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/orderTag"
        android:text="@string/oat_milk_Input"
        android:paddingStart="10dp"
        style="@style/OrderReturn"/>

    <TextView
        android:id="@+id/oatText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/oatTag"
        android:layout_below="@id/orderText"
        android:paddingStart="10dp"
        android:text=""
        style="@style/OrderReturn"/>

    <ImageView
        android:id="@+id/cupArt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/cofee_cup"
        android:contentDescription="@string/CupDesc"/>

    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/orderTitle"
        android:layout_alignParentEnd="true"
        android:text="@string/Backbtn"/>

</RelativeLayout>